update description text

--- a/config.toml
+++ b/config.toml
@@ -69,7 +69,7 @@ paginate = 10
     viewMorePostLink = "/blog/"
     author = "Space Babies"
     defaultKeywords = ["fysiotherapie", "bekkenbodem", "lymfdrainage", "handentherapie", "geriatriefysiotherapie", "haptonomie"]
-    defaultDescription = "Site template made by devcows using hugo"
+    defaultDescription = "Algemene fysiotherapie met specialismen bekken(bodem)klachten, manuele lymfdrainage/oedeemtherapie, handentherapie, geriatriefysiotherapie en haptonomie."
 
     # Google Maps API key (if not set will default to not passing a key.)
     googleMapsApiKey = "AIzaSyB0DgOmbIfqnuSqw1NITpPEKOz4meJpqTw"
