--- a/data/carousel/customizable.yaml
+++ b/data/carousel/customizable.yaml
@@ -7,7 +7,7 @@ description: >
     <li>Bekken(bodem)therapie</li>
     <li>Manuele lymfdrainage</li>
     <li>Oedeemtherapie</li>
-    <li>Handentherapie</li>
+    <li>Handtherapie</li>
     <li>Geriatriefysiotherapie</li>
     <li>Haptonomie</li>
   </ul>
