--- a/data/features/consulting.yaml
+++ b/data/features/consulting.yaml
@@ -1,4 +1,4 @@
 weight: 4
-name: "Handentherapie"
+name: "Handtherapie"
 icon: "fa fa-hand-o-right"
 description: "Onze hand is een belangrijk en prachtig gecompliceerd lichaamsdeel. Na een operatie agv bijvoorbeeld een ongeval is een snelle en specialistische aanpak van groot belang. Operatie en nabehandeling gaan daarom hand in hand, waarbij de samenwerking tussen specialisten en therapeuten gestroomlijnd moet verlopen."
