--- a/config.toml
+++ b/config.toml
@@ -1,4 +1,4 @@
-baseurl = "https://www.fysiodeurloo.nl/"
+baseURL = "https://www.fysiodeurloo.nl/"
 title = "Fysio Deurloo"
 theme = "hugo-universal-theme"
 languageCode = "nl-nl"
@@ -10,6 +10,8 @@ disqusShortname = ""
 googleAnalytics = ""
 # Define the number of posts per page
 paginate = 10
+enableGitInfo = true
+enableRobotsTXT = true
 
 # Main menu
 [menu]
@@ -77,7 +79,7 @@ paginate = 10
     defaultDescription = "Algemene fysiotherapie met specialismen bekken(bodem)klachten, manuele lymfdrainage/oedeemtherapie, handtherapie, geriatriefysiotherapie en haptonomie."
 
     # Google Maps API key (if not set will default to not passing a key.)
-    googleMapsApiKey = "AIzaSyB0DgOmbIfqnuSqw1NITpPEKOz4meJpqTw"
+    googleMapsApiKey = ""
 
     # Style options: default (light-blue), blue, green, marsala, pink, red, turquoise, violet
     style = "default"
