shut off taxonomy pages
prevents duplicate content/bad SEO

--- a/config.toml
+++ b/config.toml
@@ -12,6 +12,7 @@ googleAnalytics = ""
 paginate = 10
 enableGitInfo = true
 enableRobotsTXT = true
+disableKinds = ["taxonomy", "taxonomyTerm"]
 
 # Main menu
 [menu]
